--- a/Tip calculator app/style.css
+++ b/Tip calculator app/style.css
@@ -8,10 +8,10 @@ body {
 }
 
 header {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
   margin-bottom: 100px;
-  text-align: center;
-  font-weight: bold;
-  font-size: 24px;
 }
 
 h3 {
@@ -20,8 +20,10 @@ h3 {
 }
 
 div.main {
+  display: flex;
   background-color: white;
-  width: 40%;
+  width: 900px;
+  justify-content: center;
   margin-left: auto;
   margin-right: auto;
   padding: 30px;
@@ -40,6 +42,28 @@ div.tip-box {
   display: grid;
   grid-template-columns: 30% 30% 30%;
 }
+div.left {
+  width: 400px;
+  height: 100%;
+  display: grid;
+}
+div.element {
+  margin-top: 30px;
+}
+div.right {
+  background-color: #00494d;
+  width: 500px;
+  display: grid;
+  grid-template-columns: 90%;
+  justify-content: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  border-radius: 15px;
+}
+div.amount-grid {
+  display: grid;
+  grid-template-columns: 200px 200px;
+}
 
 input {
   background-color: transparent;
@@ -48,10 +72,14 @@ input {
 }
 input.imp {
   width: 100%;
+  text-align: right;
+  font-size: 20px;
 }
 input.custom {
   background-color: #F3F8FB;
   border-radius: 8px;
+  text-align: center;
+  font-size: 20px;
 }
 
 img {
@@ -69,6 +97,30 @@ button.tip {
   font-size: 18px;
   border-radius: 8px;
   border-color: transparent;
+}
+button.reset {
+  background-color: white;
+  border-color: transparent;
+  width: 100%;
+  height: 40px;
+  border-radius: 8px;
+  margin-top: 100px;
+  text-align: center;
+  font-weight: bold;
+  color: black;
+}
+
+p {
+  color: white;
+}
+
+span.price {
+  font-size: 50px;
+  font-weight: bold;
+  color: #26c0ab;
+}
+span.amount {
+  color: #7f9c9f;
 }
 
 /*# sourceMappingURL=style.css.map */
