--- a/Tip calculator app/style.scss
+++ b/Tip calculator app/style.scss
@@ -18,11 +18,13 @@ body{
 }
 
 header{
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
   margin-bottom: 100px;
-  text-align: center;
-  font-weight: bold;
-  font-size: 24px;
+
 }
+
 
 h3{
   color: hsl(186, 14%, 43%);
@@ -31,8 +33,10 @@ h3{
 
 div{
   &.main{
+    display: flex;
     background-color: white;
-    width: 40%;
+    width: 900px;
+    justify-content: center;
     margin-left: auto;
     margin-right: auto;
     padding: 30px;
@@ -51,6 +55,30 @@ div{
     display: grid;
     grid-template-columns: 30% 30% 30%;
   }
+  &.left{
+    width: 400px;
+    height: 100%;
+    display: grid;
+
+  }
+  &.element{
+    margin-top: 30px;
+  }
+  &.right{
+    background-color: #00494d;
+    width: 500px;
+    display: grid;
+    grid-template-columns: 90%;
+    justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-radius: 15px;
+
+  }
+  &.amount-grid{
+    display: grid;
+    grid-template-columns: 200px 200px;
+  }
 }
 
 input{
@@ -59,10 +87,14 @@ input{
   border-radius: 0;
   &.imp{
     width: 100%;
+    text-align: right;
+    font-size: 20px;
   }
   &.custom{
     background-color: #F3F8FB;
     border-radius: 8px;
+    text-align: center;
+    font-size: 20px;
   }
 }
 img{
@@ -75,11 +107,38 @@ img{
 
 button{
   &.tip{
+
     height: 35px;
     background-color: hsl(183, 100%, 15%);
     color: white;
     font-size: 18px;
     border-radius: 8px;
     border-color: transparent;
+  }
+  &.reset{
+    background-color: white;
+    border-color: transparent;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin-top: 100px;
+    text-align: center;
+    font-weight: bold;
+    color: black;
+  }
+}
+
+p{
+  color: white;
+}
+
+span{
+  &.price{
+    font-size: 50px;
+    font-weight: bold;
+    color: hsl(172, 67%, 45%);
+  }
+  &.amount{
+    color:  hsl(184, 14%, 56%);
   }
 }
